fix: remove font flickering on initial load

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'Amiri';
+  font-style: normal;
+  font-weight: 400;
+  font-display: block;
+  src: url('/fonts/amiri-400.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Amiri';
+  font-style: normal;
+  font-weight: 700;
+  font-display: block;
+  src: url('/fonts/amiri-700.woff2') format('woff2');
+}
+
 body {
   font-family: 'Amiri', serif;
   margin: 0;
